--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Invescore - New Year - 2026" />
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
   <title>Invescore - New Year</title>
 </head>
 
